--- a/index.html
+++ b/index.html
@@ -84,23 +84,23 @@
 	<div class="container" id="slider-container">
 		<div class="carousel slide" id="slider" data-bs-ride="carousel">
 			<div class="carousel-indicators">
-				<button 
+				<button
 					type="button"
-					class="active" 
-					data-bs-target="#slider" 
+					class="active"
+					data-bs-target="#slider"
 					data-bs-slide-to="0"
 					aria-current="true"
 					aria-label="Slide 1"
 				></button>
-				<button 
+				<button
 					type="button"
-					data-bs-target="#slider" 
+					data-bs-target="#slider"
 					data-bs-slide-to="1"
 					aria-label="Slide 2"
 				></button>
-				<button 
+				<button
 					type="button"
-					data-bs-target="#slider" 
+					data-bs-target="#slider"
 					data-bs-slide-to="2"
 					aria-label="Slide 3"
 				></button>
@@ -113,16 +113,132 @@
 						<a href="#" class="btn btn-dark">Ver Projetos</a>
 					</div>
 				</div>
-				<div class="carousel-item active">
+				<div class="carousel-item">
 					<img src="img/banner-2.jpg" alt="Casa 2" class="d-block w-100">
 					<div class="carousel-caption">
 						<h5>Projetos Complexos</h5>
 						<a href="#" class="btn btn-dark">Ver Projetos</a>
 					</div>
-				 	<img src="img/banner-3.jpg" alt="Casa 3" class="d-block w-100">
+				</div>
+				<div class="carousel-item">
+					<img src="img/banner-3.jpg" alt="Casa 3" class="d-block w-100">
 					<div class="carousel-caption">
 						<h5>Projetos Inovadores</h5>
 						<a href="#" class="btn btn-dark">Ver Projetos</a>
+					</div>
+				</div>
+			</div>
+			<button 
+				class="carousel-control-prev" 
+				type="button" 
+				data-bs-target="#slider" 
+				data-bs-slide="prev"
+			>
+				<i class="bi bi-chevron-compact-left"></i>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button 
+				class="carousel-control-next" 
+				type="button" 
+				data-bs-target="#slider"
+				data-bs-slide="next"
+			>
+				<i class="bi bi-chevron-compact-right"></i>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+		<!-- MINI BANNERS -->
+		<div class="col-12 col-md-10 offset-md-1" id="mini-banners">
+			<div class="row">
+				<div class="col-12 col-md-4">
+					<div class="card text-center">
+						<i class="bi bi-box primary-color"></i>
+						<div class="card-body">
+							<h5 class="card-title primary-color">Projetos completos</h5>
+							<p class="card-text secondary-color">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							</p>
+							<a href="#" class="btn btn-dark">Saber Mais</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<div class="card text-center">
+						<i class="bi bi-layers primary-color"></i>
+						<div class="card-body">
+							<h5 class="card-title primary-color">Você participa também</h5>
+							<p class="card-text secondary-color">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							</p>
+							<a href="#" class="btn btn-dark">Saber Mais</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<div class="card text-center">
+						<i class="bi bi-lightning-charge primary-color"></i>
+						<div class="card-body">
+							<h5 class="card-title primary-color">Adiantamentos de e</h5>
+							<p class="card-text secondary-color">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							</p>
+							<a href="#" class="btn btn-dark">Saber Mais</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- DESTAQUES -->
+	<div class="container" id="featured-container">
+		<div class="col-12">
+			<h2 class="title primary-color">Trabalhos em Destaque</h2>
+			<p class="subtitle primary-color">
+				Conheça nosso projetos mais desafiadores
+			</p>
+		</div>
+		<div class="col-12" id="featured-images">
+			<div class="row g-4">
+				<div class="col-12 col-md-4">
+					<img src="img/project-1.jpg" alt="Projeto 1" class="img-fluid">
+					<div class="banner-content">
+						<p class="secondary-color">Categoria</p>
+						<h3>Nome do Projeto</h3>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="img/project-2.jpg" alt="Projeto 2" class="img-fluid">
+					<div class="banner-content">
+						<p class="secondary-color">Categoria</p>
+						<h3>Nome do Projeto</h3>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="img/project-3.jpg" alt="Projeto 3" class="img-fluid">
+					<div class="banner-content">
+						<p class="secondary-color">Categoria</p>
+						<h3>Nome do Projeto</h3>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="img/project-4.jpg" alt="Projeto 4" class="img-fluid">
+					<div class="banner-content">
+						<p class="secondary-color">Categoria</p>
+						<h3>Nome do Projeto</h3>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="img/project-5.jpg" alt="Projeto 5" class="img-fluid">
+					<div class="banner-content">
+						<p class="secondary-color">Categoria</p>
+						<h3>Nome do Projeto</h3>
+					</div>
+				</div>
+				<div class="col-12 col-md-4">
+					<img src="img/project-6.jpg" alt="Projeto 6" class="img-fluid">
+					<div class="banner-content">
+						<p class="secondary-color">Categoria</p>
+						<h3>Nome do Projeto</h3>
 					</div>
 				</div>
 			</div>
