--- a/Introdução - Site de Exemplo/index.html
+++ b/Introdução - Site de Exemplo/index.html
@@ -244,5 +244,119 @@
 			</div>
 		</div>
 	</div>
+	<!-- INFO -->
+	<div class="container" id="info-container">
+		<div class="col-12">
+			<h2 class="title primary-color">Detalhes Importantes</h2>
+			<p class="subtitle secondary-color">
+				Saiba mais sobre a experiência da nossa incrível equipe
+			</p>
+		</div>
+		<div class="col-12">
+			<div class="row">
+				<div class="col-12 col-md-5" id="info-banner">
+					<img src="img/infobanner.jpg" alt="Informações da Empresa" class="img-fluid">
+				</div>
+				<div class="col-12 col-md-7 bg-secondary-color" id="info-content">
+					<div class="row">
+						<div class="col-12">
+							<h2 class="title primary-color">Estes Dados fazer a diferença</h2>
+							<p class="subtitle secondary-color">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, non tempore. Tenetur veritatis porro cum optio, asperiores saepe repellendus inventore fugiat. Repudiandae quasi quidem obcaecati eum eligendi rem voluptatem quae!
+							</p>
+						</div>
+						<div class="col-12" id="info-numbers">
+							<div class="row">
+								<div class="col-4">
+									<h3 class="primary-color">18</h3>
+									<p class="secondary-color">Anos na contrução Civil</p>
+								</div>
+								<div class="col-4">
+									<h3 class="primary-color">95</h3>
+									<p class="secondary-color">Projetos executados</p>
+								</div>
+								<div class="col-4">
+									<h3 class="primary-color">639</h3>
+									<p class="secondary-color">Clientes</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-12">
+							<a href="#" class="btn btn-dark">Saber Mais</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- FOOTER -->
+	<footer class="container-fluid bg-dark-color" id="footer">
+		<div class="container">
+			<div class="row">
+				<!-- FOOTER TOP -->
+				<div class="col-12" id="footer-top">
+					<div class="row justify-content-between">
+						<div class="col-4"><h2>iMovi</h2></div>
+						<div class="col-4" id="social-icons">
+							<i class="bi bi-facebook"></i>
+							<i class="bi bi-instagram"></i>
+							<i class="bi bi-youtube"></i>
+							<i class="bi bi-twitter"></i>
+						</div>
+					</div>
+				</div>
+				<!-- FOOTER DETAILS -->
+				<div class="col-12" id="footer-details">
+					<div class="row">
+						<div class="col-12 col-md-4" id="news-container">
+							<h4>Fique por dentro das novidades</h4>
+							<p class="secondary-color">Inscreva-se para saber em primeira mão</p>
+							<form>
+								<div class="mb-3">
+									<input type="email" class="form-control" placeholder="Digite o seu e-mail">
+								</div>
+								<button class="btn btn-dark" type="submit">Inscrever</button>
+							</form>
+						</div>
+						<div class="col-12 col-md-4" id="contact-container">
+							<h4>Formas de Contato</h4>
+							<p class="secondary-color">(48)99999-9999</p>
+							<p class="secondary-color">contato@imovi.com</p>
+						</div>
+						<div class="col-12 col-md-4" id="links-container">
+							<div class="row">
+								<h4>Você pode estar procurando por:</h4>
+								<div class="col-6">
+									<ul class="list-unstyled">
+										<li><a href="#" class="secondary-color">Projetos</a></li>
+										<li><a href="#" class="secondary-color">Imóveis</a></li>
+										<li><a href="#" class="secondary-color">Vendas</a></li>
+									</ul>
+								</div>
+								<div class="col-6">
+									<ul class="list-unstyled">
+										<li><a href="#" class="secondary-color">Contratar</a></li>
+										<li><a href="#" class="secondary-color">Trabalhe Conosco</a></li>
+										<li><a href="#" class="secondary-color">Contato</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- FOOTER BOTTOM -->
+				<div class="col-12" id="footer-bottom">
+					<div class="row justify-content-between">
+						<div class="col-12 col-md-4">
+							<p class="secondary-color">iMovi &copy; 2021</p>
+						</div>
+						<div class="col-12 col-md-4">
+							<p class="secondary-color">Realizamos seu projeto <i class="bi bi-heart"></i></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
